# iced_mpsc

./: Cargo.toml
src/: lib.rs  main.rs  mpsc.rs
