[package]
name = "iced_mpsc"
version = "0.1.0"
authors = ["Duncan Freeman <dfreeman@lucidyne.com>"]
edition = "2018"

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git", rev = "5324eb10242a7dd33f5271dc6fc9eeb09eb2cb50", features = ["canvas"] }
iced_futures = { git = "https://github.com/hecrj/iced.git", rev = "5324eb10242a7dd33f5271dc6fc9eeb09eb2cb50" }
iced_native = { git = "https://github.com/hecrj/iced.git", rev = "5324eb10242a7dd33f5271dc6fc9eeb09eb2cb50" }
